--- a/slots/dev/less/index.less
+++ b/slots/dev/less/index.less
@@ -6,6 +6,19 @@
     top: 50%;
     transform: translate(-50%, -50%);
     background: url('../image/bg.jpg') center no-repeat;
+
+    &-btn {
+        position: absolute;
+        top: 479px;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 100px;
+        height: 60px;
+        cursor:pointer;
+        background-color: transparent;
+        border:0;
+        outline:0;
+    }
 }
 
 .superheros {
@@ -17,17 +30,18 @@
     transform: translate(-50%, 0);
     border-radius: 3px;
     overflow: hidden;
-    background: -webkit-linear-gradient(top, rgb(45,45,45) 0, #e3e3e3 100%);
+    background: -webkit-linear-gradient(top, rgb(45,45,45) 0, #fff 50%, rgb(45,45,45) 100%);
 
     &-list01,
     &-list02,
     &-list03 {
         width: 110px;
         position: absolute;
-        top: -65px;
+        top: -60px;
         left: 0;
 
         img {
+            display: block;
             width: 100%;
         }
     }
