--- a/slots/dev/less/index.less
+++ b/slots/dev/less/index.less
@@ -6,6 +6,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     background: url('../image/bg.jpg') center no-repeat;
+    box-shadow: 6px 3px 6px rgba(0, 0, 0, 0.2);
 
     &-btn {
         position: absolute;
