--- a/slots/static/css/index.css
+++ b/slots/static/css/index.css
@@ -8,6 +8,8 @@
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background: url('../image/bg.jpg') center no-repeat;
+  -webkit-box-shadow: 6px 3px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 6px 3px 6px rgba(0, 0, 0, 0.2);
 }
 .slots-container-btn {
   position: absolute;
