--- a/slots/dev/less/index.less
+++ b/slots/dev/less/index.less
@@ -38,7 +38,7 @@
     &-list03 {
         width: 110px;
         position: absolute;
-        top: -60px;
+        // top: -60px;
         left: 0;
 
         img {
